fix popup styles. AG-33925
Squashed commit of the following:

commit 696d4b066f6efac1f3494892f39b767bdf75f804
Merge: ad6a30011 294a49924
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 28 11:10:50 2024 +0300

    Merge branch 'v5.0' into fix/AG-33925

commit ad6a300114f4b8c2e8d01755f375051c15de9bf2
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 27 19:08:08 2024 +0300

    fix linter

commit 33a2709c844a54056af1ded6224eb03fbf4b9986
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 27 19:03:52 2024 +0300

    fix popup select list background-color for light

commit 44cbccdccec03052c79b1782f3a11a257c52e480
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 27 19:02:02 2024 +0300

    fix popup current site and cta link styles

commit de43b195faa749dbf0fa07944a7838f659d76c64
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 27 18:53:36 2024 +0300

    fix popup background-color for dark

--- a/Extension/src/pages/popup/components/Header/header.pcss
+++ b/Extension/src/pages/popup/components/Header/header.pcss
@@ -6,7 +6,7 @@
     padding: 0 16px 0 24px;
 
     @media (prefers-color-scheme: dark) {
-        background-color: var(--black);
+        background-color: var(--gray1f);
     }
 
     &__buttons {
@@ -53,7 +53,7 @@
 
 .dark-mode {
     .popup-header {
-        background-color: var(--black);
+        background-color: var(--gray1f);
 
         &__button {
             color: var(--grayc0);
