--- a/Extension/src/pages/popup/components/Main/main.pcss
+++ b/Extension/src/pages/popup/components/Main/main.pcss
@@ -244,12 +244,21 @@
     .main {
         color: var(--gray900);
 
-        &__cta-link {
-            color: var(--gray700);
-
-            &:hover {
-                color: var(--gray900);
+        &__header {
+            &--current-site {
+                color: var(--gray7f);
             }
+        }
+
+        &__cta {
+            &--link {
+                color: var(--gray7f);
+
+                &:hover {
+                    color: var(--gray3d);
+                }
+            }
+
         }
     }
 
@@ -266,11 +275,19 @@
     .main {
         color: var(--gray300);
 
-        &__cta-link {
-            color: var(--gray400);
+        &__header {
+            &--current-site {
+                color: var(--grayc0);
+            }
+        }
 
-            &:hover {
-                color: var(--gray100);
+        &__cta {
+            &--link {
+                color: var(--grayc0);
+
+                &:hover {
+                    color: var(--graye4);
+                }
             }
         }
     }
