--- a/Extension/src/pages/popup/styles/common.pcss
+++ b/Extension/src/pages/popup/styles/common.pcss
@@ -15,19 +15,19 @@ body,
     min-height: 100%;
     width: auto;
     min-width: 320px;
-    background-color: var(--width);
+    background-color: var(--white);
 
     @media (prefers-color-scheme: dark) {
-        background-color: var(--black);
+        background-color: var(--gray1f);
     }
 }
 
 html {
     font-size: 10px;
-    background-color: var(--width);
+    background-color: var(--white);
 
     @media (prefers-color-scheme: dark) {
-        background-color: var(--black);
+        background-color: var(--gray1f);
     }
 }
 
@@ -69,20 +69,20 @@ select {
 
 .light-mode {
     color-scheme: light;
-    background-color: var(--width);
+    background-color: var(--white);
 
     body,
     #root {
-        background-color: var(--width);
+        background-color: var(--white);
     }
 }
 
 .dark-mode {
     color-scheme: dark;
-    background-color: var(--black);
+    background-color: var(--gray1f);
 
     body,
     #root {
-        background-color: var(--black);
+        background-color: var(--gray1f);
     }
 }
